misc commit prior to 3.1.0